# robot_envs

./: .gitignore  README.md  pyproject.toml
CG/: CG_L2_image_wrapper.py  CG_L2_image_wrapper_cg.py  CG_L2_state_wrapper.py
CG/mimicgen/mimicgen/configs/: robosuite.py
CG/mimicgen/mimicgen/env_interfaces/: robosuite.py
CG/mimicgen/mimicgen/scripts/: generate_core_configs.py  generate_dataset.py  prepare_src_dataset.py
CG/robosuite/: setup.py
CG/robosuite/robosuite/: __init__.py
CG/robosuite/robosuite/devices/: spacemouse.py
CG/robosuite/robosuite/environments/: base.py
CG/robosuite/robosuite/scripts/: collect_L2_demonstrations.py  collect_human_demonstrations.py  modify_mimicgen_action.py  playback_mimicgen_from_hdf5.py
CG/robosuite/robosuite/utils/: binding_utils.py  mjcf_utils.py  placement_samplers.py
CG/robot_envs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/src/policies/: __init__.py
models/src/policies/algorithms/: __init__.py  flow_matching.py
models/src/policies/config/: __init__.py  default_run_config.json  default_run_config_key_ac20_k3.json  default_run_config_key_ac20_k3_amp.json  default_run_config_key_ac20_k8.json  default_run_config_key_ac20_k8_amp.json  default_run_config_key_ac20_k8_amp_longer.json  default_run_config_state_direct_all_10kstep.json  default_run_config_state_direct_select_ac20_k8.json  default_run_config_state_only_ac20_k8.json  run_config.py
models/src/robopolicy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: eval_policy.py  generate.py  smoke_cg_l2_image.py
(+304 files in other folders)
